--- a/examples/histograms.ipynb
+++ b/examples/histograms.ipynb
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "mw = mwem(RangeQueries(domain_size), Histogram(ys/sum(ys), num_samples));\n",
+    "mw = mwem(SeriesRangeQueries(domain_size), Histogram(ys/sum(ys), num_samples));\n",
     "bar(xs, mw.synthetic.weights*num_samples, align=\"center\", color=\"red\", alpha=0.3, width=1/domain_size);"
    ]
   },
@@ -166,7 +166,7 @@
     }
    ],
    "source": [
-    "mw = mwem(RangeQueries(domain_size), Histogram(ys/sum(ys), num_samples), MWParameters(epsilon=0.1, iterations=8));\n",
+    "mw = mwem(SeriesRangeQueries(domain_size), Histogram(ys/sum(ys), num_samples), MWParameters(epsilon=0.1, iterations=8));\n",
     "bar(xs, mw.synthetic.weights*num_samples, align=\"center\", color=\"red\", alpha=0.3, width=1/domain_size);"
    ]
   },
